--- a/Kernel/bml_mtd/arch/arm/configs/samurai_bml_ei22_defconfig
+++ b/Kernel/bml_mtd/arch/arm/configs/samurai_bml_ei22_defconfig
@@ -109,6 +109,7 @@ CONFIG_KALLSYMS_ALL=y
 # CONFIG_KALLSYMS_EXTRA_PASS is not set
 CONFIG_HOTPLUG=y
 CONFIG_PRINTK=y
+CONFIG_SEC_LOG=y
 CONFIG_BUG=y
 CONFIG_ELF_CORE=y
 CONFIG_BASE_FULL=y
@@ -642,7 +643,7 @@ CONFIG_NETFILTER_XT_TARGET_MARK=y
 CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
 # CONFIG_NETFILTER_XT_TARGET_TEE is not set
-CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
+# CONFIG_NETFILTER_XT_TARGET_TCPMSS is not set
 
 #
 # Xtables matches
@@ -1816,7 +1817,9 @@ CONFIG_ONEDRAM_TX_RETRY=10
 #
 # TinyFSR Support for cramfs
 #
-# CONFIG_TINY_FSR is not set
+CONFIG_TINY_FSR=y
+CONFIG_TINY_FLASH_PHYS_ADDR=0xB0000000
+CONFIG_LINUSTOREIII_TINY_DEBUG_VERBOSE=0
 
 #
 # File systems
