--- a/Kernel/cm9/arch/arm/mach-s5pv210/Kconfig
+++ b/Kernel/cm9/arch/arm/mach-s5pv210/Kconfig
@@ -17,6 +17,13 @@ config CPU_S5PV210
 	help
 	  Enable S5PV210 CPU support
 
+config S5PV210_BIGMEM
+	bool "Enable Bigmem (more free RAM)"
+	default n
+	help
+	  Aggressively restrict the memory set aside on
+	  boot for FIMC, MFC and JPEG.
+
 config S5PV210_SETUP_I2C1
 	bool
 	depends on S3C_DEV_I2C1
@@ -338,5 +345,12 @@ config POKE_REC_BOOT_MAGIC
 	help
 	  Poke REC_BOOT_MAGIC into REC_BOOT_ADDR on reboot(..., "recovery") to flag
 	  stage1 init to load the recovery image.
+
+config FORCE_FAST_CHARGE
+       bool "Force AC charge mode at will"
+       default y
+       help
+         A simple sysfs interface to force adapters that
+         are detected as USB to charge as AC.
 
 endif
