--- a/Kernel/cm9/arch/arm/configs/samurai_mtd_cm9_defconfig
+++ b/Kernel/cm9/arch/arm/configs/samurai_mtd_cm9_defconfig
@@ -318,6 +318,7 @@ CONFIG_S5PV210_SETUP_I2C2=y
 CONFIG_S5PV210_SETUP_SDHCI=y
 CONFIG_S5PV210_SETUP_SDHCI_GPIO=y
 CONFIG_S5PV210_POWER_DOMAIN=y
+# CONFIG_S5PV210_BIGMEM is not set
 CONFIG_DDR_RAM_3G=y
 # CONFIG_DDR_RAM_2G is not set
 # CONFIG_MACH_AQUILA is not set
