--- a/Kernel/bml_mtd/arch/arm/configs/samurai_bml_el30_defconfig
+++ b/Kernel/bml_mtd/arch/arm/configs/samurai_bml_el30_defconfig
@@ -917,6 +917,18 @@ CONFIG_APANIC_PLABEL="kpanic"
 CONFIG_VIBETONZ=m
 CONFIG_SAMSUNG_JACK=y
 CONFIG_USB_SWITCH_FSA9480=y
+CONFIG_USB_S3C_OTG_HOST=y
+CONFIG_USB_DWC_OTG=y
+CONFIG_DWC_DEBUG=y
+CONFIG_DWC_HOST_ONLY=y
+CONFIG_USB_DEBUG=y
+CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
+CONFIG_USB_STORAGE=y
+CONFIG_USB_SERIAL=y
+CONFIG_USB_SERIAL_CONSOLE=y
+CONFIG_USB_SERIAL_GENERIC=y
+CONFIG_USB_SERIAL_FTDI_SIO=y
+CONFIG_USB_ACM=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1047,9 +1059,9 @@ CONFIG_INPUT=y
 #
 CONFIG_INPUT_MOUSEDEV=y
 CONFIG_INPUT_MOUSEDEV_PSAUX=y
-CONFIG_INPUT_MOUSEDEV_SCREEN_X=1024
-CONFIG_INPUT_MOUSEDEV_SCREEN_Y=768
-# CONFIG_INPUT_JOYDEV is not set
+CONFIG_INPUT_MOUSEDEV_SCREEN_X=800
+CONFIG_INPUT_MOUSEDEV_SCREEN_Y=480
+CONFIG_INPUT_JOYDEV=y
 CONFIG_INPUT_EVDEV=y
 # CONFIG_INPUT_EVBUG is not set
 # CONFIG_INPUT_APMPOWER is not set
@@ -1083,7 +1095,9 @@ CONFIG_S3C_KEYPAD_DEBUG=y
 CONFIG_KEYPAD_S3C_INT=y
 # CONFIG_KEYPAD_S3C_MSM is not set
 # CONFIG_INPUT_MOUSE is not set
-# CONFIG_INPUT_JOYSTICK is not set
+CONFIG_INPUT_JOYSTICK=y
+CONFIG_JOYSTICK_XPAD=y
+CONFIG_JOYSTICK_XPAD_FF=y
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_QT602240=y
@@ -1818,6 +1832,18 @@ CONFIG_ONEDRAM_TX_RETRY=10
 # CONFIG_ONEDRAM_IRQ_PENDING is not set
 
 #
+# LinuStoreIII Flash Devices (FSR)
+#
+CONFIG_RFS_FSR=m
+CONFIG_RFS_FSR_STL=m
+CONFIG_RFS_STL_DELETE=y
+# CONFIG_RFS_FSR_STL_BENCHMARK is not set
+# CONFIG_FSR_DUAL_VOLUME is not set
+CONFIG_FSR_FLASH_PHYS_ADDR=0xB0000000
+CONFIG_LINUSTOREIII_DEBUG_VERBOSE=0
+CONFIG_LINUSTOREIII_DEBUG=y
+
+#
 # TinyFSR Support for cramfs
 #
 CONFIG_TINY_FSR=y
@@ -1896,10 +1922,28 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_BEFS_FS is not set
 # CONFIG_BFS_FS is not set
 # CONFIG_EFS_FS is not set
-# CONFIG_JFFS2_CMODE_NONE is not set
-# CONFIG_JFFS2_CMODE_PRIORITY is not set
-# CONFIG_JFFS2_CMODE_SIZE is not set
-# CONFIG_JFFS2_CMODE_FAVOURLZO is not set
+
+#
+# RFS Filesystem
+#
+CONFIG_RFS_FS=m
+CONFIG_RFS_DEFAULT_IOCHARSET="utf8"
+CONFIG_RFS_FS_PERMISSION=y
+# CONFIG_RFS_FS_XATTR is not set
+CONFIG_RFS_FS_SYNC_ON_CLOSE=y
+CONFIG_RFS_FS_ERASE_SECTOR=y
+CONFIG_RFS_FS_SPECIAL=y
+
+#
+# RFS debugging options
+#
+# CONFIG_RFS_FS_DEBUG is not set
+
+#
+# RFS Core Filesystems
+#
+CONFIG_RFS_FS_CORE_FAT=m
+CONFIG_RFS_FS_FAT_VFAT=y
 # CONFIG_LOGFS is not set
 CONFIG_CRAMFS=y
 # CONFIG_SQUASHFS is not set
