--- a/initramfs/initramfs_el30/init.rc
+++ b/initramfs/initramfs_el30/init.rc
@@ -108,8 +108,7 @@ loglevel 3
     insmod /lib/modules/rfs_fat.ko
     insmod /lib/modules/dpram.ko
     insmod /lib/modules/j4fs.ko
-    #insmod /lib/modules/mbcache.ko
-    #insmod /lib/modules/ext4.ko
+
     insmod /lib/modules/Si4709_driver.ko
 
     # ko files for vibrator
@@ -122,8 +121,8 @@ loglevel 3
     insmod /lib/modules/hotspot_event_monitoring.ko
 
     #temp
-    #chown root root /sbin/fat.format
-    #chmod 750 /sbin/fat.format
+    chown root root /sbin/fat.format
+    chmod 750 /sbin/fat.format
 
 on fs
 # mount mtd partitions
@@ -162,9 +161,9 @@ on fs
     mkdir /data
 # SEC_DMCRYPT crypt flag added data
     # mount rfs /dev/block/mmcblk0p2 /data nosuid nodev check=no
-    #mount rfs /dev/block/mmcblk0p2 /data nosuid nodev crypt check=no
-    #chown system system /data
-    #chmod 0771 /data    
+    mount rfs /dev/block/mmcblk0p2 /data nosuid nodev crypt check=no
+    chown system system /data
+    chmod 0771 /data    
 
     #mkdir /dbdata
   #SEC_DMCRYPT crypt flag added
@@ -174,7 +173,7 @@ on fs
     #mount rfs /dev/block/stl10 /data nosuid nodev check=no
     chown system system /data
     chmod 0771 /data
-    #chmod 0771 /data
+    chmod 0771 /data
     mkdir /data/databases
     chown system system /data/databases
     chmod 0777 /data/databases
@@ -201,7 +200,7 @@ on fs
     insmod /lib/modules/wimax_gpio.ko
     insmod /lib/modules/cmc7xx_sdio.ko
 #root
-    chown root root /sbin/su
+    chown root system /sbin/su
     symlink /sbin/busybox /sbin/recovery
     chown root root /sbin/Superuser.apk
     chown root system /sbin/busybox
@@ -783,12 +782,6 @@ service userscript /system/bin/sh /bin/userscript.sh
 	critical	
 	oneshot
 
-service bootanim /system/bin/bootanimation
-	user graphics
-	group graphics
-	critical
-	oneshot
-
 service zygote /system/bin/app_process -Xzygote /system/bin --zygote --start-system-server
     socket zygote stream 666
     onrestart write /sys/android_power/request_state wake
@@ -802,12 +795,17 @@ service media /system/bin/mediaserver
     ioprio rt 4
 
 
-#service samsungani /system/bin/samsungani
-#    user graphics
-#    group graphics
-#    disabled
-#    oneshot
+service samsungani /system/bin/samsungani
+    user graphics
+    group graphics
+    disabled
+    oneshot
 
+service bootanim /system/bin/bootanimation
+    user graphics
+    group graphics
+    critical
+    oneshot
 
 service playsound /system/bin/playsound
     user media
@@ -875,6 +873,8 @@ service pbap /system/bin/sdptool add --channel=19 PBAP
 service installd /system/bin/installd
     socket installd stream 600 system system
 
+service flash_recovery /system/etc/install-recovery.sh
+    oneshot
 
 service racoon /system/bin/racoon
     socket racoon stream 600 system system
