--- a/initramfs/initramfs_el30/recovery.rc
+++ b/initramfs/initramfs_el30/recovery.rc
@@ -38,8 +38,7 @@ on early-fs
     insmod /lib/modules/fsr_stl.ko
     insmod /lib/modules/rfs_glue.ko
     insmod /lib/modules/rfs_fat.ko
-    #insmod /lib/modules/mbcache.ko
-    #insmod /lib/modules/ext4.ko
+
     # parameter block
     mkdir /mnt/.lfs 0755 root root
     insmod /lib/modules/j4fs.ko
@@ -68,7 +67,7 @@ on fs
     exec apply_disk_policy
 
 on post-fs
-       mount rootfs rootfs / ro remount
+    mount rootfs rootfs / ro remount
 
     write /proc/sys/kernel/panic_on_oops 1
     write /proc/sys/kernel/hung_task_timeout_secs 0
@@ -77,23 +76,6 @@ on post-fs
     write /proc/sys/kernel/sched_wakeup_granularity_ns 2000000
     write /proc/sys/kernel/sched_compat_yield 1
     write /proc/sys/kernel/sched_child_runs_first 0
-    chown root system /sbin
-    chown root system /sbin/su
-    symlink /sbin/busybox /sbin/recovery
-    chown root system /sbin/busybox
-    chown root system /sbin/recovery
-    chown root system /sbin/sh
-    chown root system /sbin/adbd
-    chown root system /sbin/recovery.sh
-    chown root system /sbin/userscript.sh
-    chown root system /sbin
-
-    chmod 755 /sbin
-    chmod 6755 /sbin/su
-    chmod 6755 /sbin/recovery
-    chmod 755 /sbin/adbd
-    chmod 755 /sbin/recovery.sh
-    chmod 755 /sbin/userscript.sh
 	
 on boot
 
@@ -110,20 +92,6 @@ service ueventd /sbin/ueventd
 #    console
 
 #service recovery /sbin/recovery
-#service recovery /system/bin/recovery
-
-
-chmod 755 /sbin/recovery.sh
-service sdx /sbin/recovery.sh   
-critical
-user root 
-oneshot
+service recovery /system/bin/recovery
 
 service adbd /sbin/adbd recovery
-    disabled
-
-#on property:persist.service.adb.enable=1
-#    start adbd
-
-#on property:persist.service.adb.enable=0
-#    stop adbd
