--- a/initramfs/initramfs_el30/fota.rc
+++ b/initramfs/initramfs_el30/fota.rc
@@ -54,6 +54,7 @@ on early-fs
 on fs
 #    mount tmpfs tmpfs /tmp
     mount rfs /dev/block/stl9 /system check=no
+	mount ext4 /dev/block/stl9 /system noatime nodiratime errors=continue
 
 
 # SEC_DMCRYPT for MC_CRYPT_ROOT before apply_disk_policy or apply_sec_devenc_init
@@ -94,10 +95,3 @@ service ueventd /sbin/ueventd
 service recovery /system/bin/recovery
 
 service adbd /sbin/adbd recovery
-    disabled
-
-#on property:persist.service.adb.enable=1
-#    start adbd
-
-#on property:persist.service.adb.enable=0
-#    stop adbd
